<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corNova"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.senai.stdevelopment.HistoriaActivity"
    tools:showIn="@layout/app_bar_historia">

    <TextView
        android:id="@+id/textHistoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="42dp"
        android:fontFamily="cursive"
        android:text="@string/textHistoria"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHistoria">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                android:fontFamily="cursive"
                android:text="@string/textComeco"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="-60dp"
                app:srcCompat="@drawable/comeco" />

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textMeio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="90dp"
                android:fontFamily="cursive"
                android:text="@string/textMeio"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="-120dp"
                app:srcCompat="@drawable/nasa" />

            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="110dp"
                android:fontFamily="cursive"
                android:text="@string/textFinal"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="100dp"
                android:layout_height="160dp"
                android:layout_marginRight="260dp"
                android:layout_marginTop="-220dp"
                app:srcCompat="@drawable/sergey" />

            <SeekBar
                android:id="@+id/seekBar4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/textFinalSeason"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                app:srcCompat="@drawable/google" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
